--- a/2019-10/文献/文献链接.md
+++ b/2019-10/文献/文献链接.md
@@ -1,3 +1,10 @@
 - 2019-10-20
     - [Evolution of cooperation driven by self-recommendation](https://journals.aps.org/pre/pdf/10.1103/PhysRevE.100.042303)
         - individuals self-recommend themselves to those that are about to have new neighbors
+    
+- 2019-10-21
+
+    - Limits of Predictability in Human Mobility https://science.sciencemag.org/content/sci/327/5968/1018.full.pdf
+
+        
+         
